--- a/article.ipynb
+++ b/article.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/main/lib/python3.9/site-packages/xgboost/compat.py:31: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
-      "  from pandas import MultiIndex, Int64Index\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import xgboost as xgb\n",
@@ -67,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +83,7 @@
      "text": [
       "RMSE (13 players): 2.017629\n",
       "RMSE (10 players): 3.06293\n",
-      "RMSE (5 plyaers): 4.549689\n",
+      "RMSE (5 plyaers): 4.493159\n",
       "RMSE (1 player): 6.055228\n"
      ]
     }
@@ -127,9 +118,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Players: 542\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -441,7 +439,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>542 rows × 108 columns</p>\n",
+       "<p>635 rows × 108 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -497,10 +495,10 @@
        "633   46.822500   56.187500  0.054250  \n",
        "634   35.169143   42.202857  0.024114  \n",
        "\n",
-       "[542 rows x 108 columns]"
+       "[635 rows x 108 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +506,8 @@
    "source": [
     "data = pd.read_csv('data/22021_data.csv').set_index('_id').drop('GAME_ID',axis=1)\n",
     "average_data = get_average_player_performances(data)\n",
-    "average_data.drop_duplicates(\"PLAYER_NAME\", keep='first')"
+    "print('Number of Players:',len(average_data.PLAYER_NAME.unique()))\n",
+    "average_data"
    ]
   },
   {
@@ -551,27 +550,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Players (A): ['Rodney Hood', 'Immanuel Quickley', 'Mychal Mulder', 'Kevin Love', 'Wendell Carter Jr.', 'Wenyen Gabriel', 'George King', 'Darius Bazley', 'Moses Moody', 'Ryan Arcidiacono', 'Shaquille Harrison', 'Luke Kennard', 'Derrick Jones Jr.']\n",
-      "Players (B): ['Aleksej Pokusevski', 'Kelan Martin', 'Norman Powell', 'Micah Potter', 'Langston Galloway', 'Buddy Hield', 'Terence Davis', 'Rodney McGruder', 'Ish Wainright', 'Kyrie Irving', 'Serge Ibaka', 'Hassan Whiteside', 'LaMelo Ball']\n",
-      "Plus Minus (A): 0.44363778829574585\n",
-      "Plus Minus (B): 0.08266866207122803\n"
+      "Players (A): ['George Hill', 'Keon Johnson', 'Mike Muscala', 'Grayson Allen', 'Klay Thompson', 'Carmelo Anthony', 'Derrick Walton Jr.', 'Devin Booker', 'Montrezl Harrell', 'Damion Lee', 'Jeff Dowtin', 'Trae Young', 'Moritz Wagner']\n",
+      "Players (B): ['Solomon Hill', 'Anthony Gill', 'Bones Hyland', 'Matt Ryan', 'Kevin Pangos', 'T.J. McConnell', 'DeJon Jarreau', 'Trey Lyles', 'Precious Achiuwa', 'Payton Pritchard', 'Leandro Bolmaro', 'Matt Thomas', 'Jonathan Kuminga']\n",
+      "Plus Minus (A): 3.5906920433044434\n",
+      "Plus Minus (B): -2.1532857418060303\n"
      ]
     }
    ],
    "source": [
     "team_a = average_data.sample(13)\n",
-    "team_a_players = team_a.PLAYER_NAME.to_list()\n",
-    "team_a_ids = team_a.PLAYER_ID.to_list()\n",
+    "team_a_players, team_a_ids = team_a.PLAYER_NAME.to_list(), team_a.PLAYER_ID.to_list()\n",
     "team_b = average_data[~average_data['PLAYER_ID'].isin(team_a_ids)].sample(13)\n",
-    "team_b_players = team_b.PLAYER_NAME.to_list()\n",
-    "team_b_ids = team_b.PLAYER_ID.to_list()\n",
+    "team_b_players, team_b_ids = team_b.PLAYER_NAME.to_list(), team_b.PLAYER_ID.to_list()\n",
     "(team_a_pm, team_b_pm) = simulate_arbitrary_matchup(team_a_ids, team_b_ids, average_data,model=model_13,team_size=13)\n",
     "print(f'Players (A): {team_a_players}')\n",
     "print(f'Players (B): {team_b_players}')\n",
@@ -625,6 +622,52 @@
    "metadata": {},
    "source": [
     "These win-loss results show that Boston is the best team in the NBA, winning against all other teams, while Utah and Pheonix are their strongest competition this year. On the other end, Detroit, Orlando, and the L.A. Lakers have the lowest win-to-loss ratios, with Detriot unable to win against any team. By comparing this with the actual standings of the current NBA season, we see a clear correlation indicating the model's predictive power."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can do the same but this time just looking at the starting 5 of each team."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 30/30 [00:11<00:00,  2.52it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'PHX': 1.0, 'BOS': 0.9655172413793104, 'UTA': 0.9310344827586207, 'MIL': 0.896551724137931, 'MIA': 0.8620689655172413, 'GSW': 0.8275862068965517, 'DEN': 0.7586206896551724, 'CLE': 0.7241379310344828, 'TOR': 0.7241379310344828, 'MEM': 0.7241379310344828, 'MIN': 0.6551724137931034, 'SAS': 0.6206896551724138, 'DAL': 0.6206896551724138, 'ATL': 0.5517241379310345, 'PHI': 0.5172413793103449, 'POR': 0.4827586206896552, 'BKN': 0.41379310344827586, 'NOP': 0.41379310344827586, 'CHA': 0.41379310344827586, 'CHI': 0.3448275862068966, 'LAC': 0.3103448275862069, 'IND': 0.27586206896551724, 'NYK': 0.2413793103448276, 'WAS': 0.20689655172413793, 'SAC': 0.1724137931034483, 'LAL': 0.13793103448275862, 'HOU': 0.10344827586206896, 'DET': 0.06896551724137931, 'ORL': 0.034482758620689655, 'OKC': 0.0}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "regular_season_results = simulate_regular_season(average_data,model=model_5,team_size=5)\n",
+    "print(regular_season_results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this case Pheonix is predicted to beat Boston."
    ]
   },
   {
