--- a/article.ipynb
+++ b/article.ipynb
@@ -27,11 +27,11 @@
    "source": [
     "**Assumptions**\n",
     "\n",
-    "A team's performance can only be judged relative to another group, and it is crucial to include both competing teams' player performances when predicting the outcome of a game. Moreover, instead of simply mapping to a binary win-loss condition, I used the team's plus-minus score. This score is purely relative and allows the model to pick up on more detailed correlations suggesting why a set of players may have been better than another set of players.\n",
+    "A team's performance can only be judged relative to another teams, and it is crucial to include both competing teams' player performances when predicting the outcome of a game. Moreover, instead of simply mapping to a binary win-loss condition, I used the team's plus-minus score. This score is purely relative and allows the model to pick up on more detailed correlations suggesting why a set of players may have been better than another set of players.\n",
     "\n",
     "Initially, I assumed that mapping from collective player performances to team performance and then mapping from team performance to the plus-minus results would yield the best results. However, it turned out that while second mapping had a very high accuracy, the formed did not. Moreover, the mapping from individual player performance to team performance in large parts is trivial. For example, the number of team assists would simply be the sum of all player's assists. Instead of using two models, I decided to simply use a single model which maps directly from a set of individual player performances for both teams to a plus-minus score.\n",
     "\n",
-    "A given player's performance data is simply averaged over a given period, such as the current season, and is then grouped with the average performances of other players."
+    "A given player's performance data is simply averaged over a given period, such as the current season, and is then grouped with the average performances of other players to form a team."
    ]
   },
   {
@@ -99,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have trained our models, which can predict the outcome of a matchup between two sets of player performances, we calculate the average performance data for each active player throughout a season and use this as our input data. Now let's build some cool apps using our model."
+    "Now that we have trained our models, which can predict the outcome of a matchup between two sets of player performances, we calculate the average performance data for each active player throughout a season and use this as our input data."
    ]
   },
   {
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our model predicts that the Celtics will win by 4.73 points over the Suns when playing in Boston and that the Suns will lose by -0.43 points when playing in Pheonix. The winner of this matchup will therefore be the Boston Celtics.\n",
+    "Our model predicts that the Celtics will win by 2.02 points over the Suns when playing in Boston and that the Suns will win by 0.52 points when playing in Pheonix. The winner of this matchup will therefore be the Boston Celtics as they win by a higher margin.\n",
     "\n",
     "We can also match up imaginary teams and see who wins. As an example, we can randomly sample two sets of 13 players."
    ]
