--- a/article.ipynb
+++ b/article.ipynb
@@ -1253,7 +1253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another possible application of our model would be to build a team around a given player. For example, let's create a team around Giannis Antetokounmpo by finding the team with the highest win-loss ratio. As of now have imposed no restrictions on the total trade value of the group of players (similar to a salary cap)"
+    "Alternatively, we can iteraitvely find better teams with Giannis by matching them up with the current team and taking the winner of the matchup."
    ]
   },
   {
