--- a/article.ipynb
+++ b/article.ipynb
@@ -1744,7 +1744,7 @@
    "source": [
     "**Conclusion**\n",
     "\n",
-    "We have to build a set of models helpful in predicting who wins a basketball game based on the individual player statistics of players on both teams. The models can then be used in various applications, for example, a trade finder that can suggest trades for a specific NBA team. Our analysis predicts that the Boston Celtics will win this year's playoffs."
+    "We have built a set of models helpful in predicting who wins a basketball game based on the individual player statistics of players on both teams. The models can be used in various applications, for example, a trade finder that can suggest trades for a specific NBA team. Our analysis predicts that the Boston Celtics will win this year's playoffs."
    ]
   },
   {
