Some upgrades and fixes but also some breaks that need fixing

--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -2,22 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pymongo\n",
     "from constants import MONGO_NAME, MONGO_PW, MONGO_DB\n",
     "import pandas as pd\n",
-    "from nba_api.stats.static import players\n",
+    "from nba_api.stats.static import players, teams\n",
     "from helpers import (\n",
     "    flatten_performance_df,\n",
     "    get_average_player_performances,\n",
-    "    get_score_df,\n",
-    "    get_team_feature_df\n",
     ")\n",
-    "from simulation import simulate_nba_matchup, simulate_regular_season, simulate_arbitrary_matchup, get_super_team, get_super_team_for_player, run_tournament, test_team, nba_test_team, nba_trade_finder\n",
-    "import numpy as np\n",
+    "from simulation import simulate_nba_matchup\n",
     "import xgboost as xgb\n",
     "from nba_api.stats.endpoints import leaguegamefinder"
    ]
@@ -36,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,18 +41,10 @@
     "all_games = gamefinder.get_data_frames()[0]\n",
     "current_season = all_games[all_games.SEASON_ID == \"22021\"]\n",
     "games = list(set(current_season.GAME_ID))\n",
-    "\n",
     "active_players = players.get_active_players()\n",
     "active_players = pd.DataFrame(active_players)\n",
-    "active_player_ids = active_players.id.to_list()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 343,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "active_player_ids = active_players.id.to_list()\n",
+    "\n",
     "season_performances = pd.DataFrame(\n",
     "    list(\n",
     "        db.playerPerformances.find(\n",
@@ -66,437 +55,172 @@
     "        )\n",
     "    )\n",
     ").set_index(\"_id\")\n",
-    "season_performances = flatten_performance_df(season_performances)\n"
+    "season_performances = flatten_performance_df(season_performances)\n",
+    "average_performances = get_average_player_performances(season_performances)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "season_performances.to_csv('22021_data.csv')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "decide which performances to consider"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 348,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "average_performances = get_average_player_performances(season_performances)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 243,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "team_size = 13\n",
+    "team_size = 10\n",
     "model = xgb.XGBRegressor()\n",
     "model.load_model(f\"models/{team_size}_player_model.json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trade_value_df = get_score_df(average_performances)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-2.8435853  5.445432 ]\n",
-      "8.289018\n"
+      "[ 3.7773416 -2.742346 ]\n"
      ]
     }
    ],
    "source": [
-    "score = simulate_nba_matchup('BKN','BOS', average_performances)\n",
-    "print(score)\n",
-    "print(abs(score[0]-score[1]))\n"
+    "team_A, team_B = 'BOS','BKN'\n",
+    "score = simulate_nba_matchup(team_A,team_B, average_performances,model=model, team_A_injured_player_ids=[1629057],team_B_injured_player_ids=[1627732,203925], team_size=team_size)\n",
+    "print(score)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 30/30 [00:30<00:00,  1.00s/it]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'BOS': 1.0,\n",
-       " 'UTA': 0.9655172413793104,\n",
-       " 'PHX': 0.9310344827586207,\n",
-       " 'GSW': 0.8620689655172413,\n",
-       " 'CLE': 0.8620689655172413,\n",
-       " 'MEM': 0.8275862068965517,\n",
-       " 'MIA': 0.7586206896551724,\n",
-       " 'BKN': 0.7586206896551724,\n",
-       " 'ATL': 0.7241379310344828,\n",
-       " 'MIL': 0.7241379310344828,\n",
-       " 'SAS': 0.6896551724137931,\n",
-       " 'MIN': 0.6206896551724138,\n",
-       " 'DAL': 0.5862068965517241,\n",
-       " 'PHI': 0.5517241379310345,\n",
-       " 'DEN': 0.5172413793103449,\n",
-       " 'CHA': 0.4827586206896552,\n",
-       " 'TOR': 0.4482758620689655,\n",
-       " 'CHI': 0.41379310344827586,\n",
-       " 'NOP': 0.3448275862068966,\n",
-       " 'LAC': 0.3103448275862069,\n",
-       " 'POR': 0.3103448275862069,\n",
-       " 'WAS': 0.3103448275862069,\n",
-       " 'NYK': 0.27586206896551724,\n",
-       " 'IND': 0.20689655172413793,\n",
-       " 'HOU': 0.1724137931034483,\n",
-       " 'SAC': 0.13793103448275862,\n",
-       " 'OKC': 0.10344827586206896,\n",
-       " 'LAL': 0.06896551724137931,\n",
-       " 'ORL': 0.034482758620689655,\n",
-       " 'DET': 0.0}"
-      ]
-     },
-     "execution_count": 352,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results_dict = simulate_regular_season(average_performances)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 428,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 10%|█         | 1/10 [00:00<00:06,  1.29it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Winner Team:  ['Kyrie Irving', 'Fred VanVleet', 'Karl-Anthony Towns', 'Jonas Valanciunas', \"De'Andre Hunter\", 'Deandre Ayton', 'Landry Shamet', 'Richaun Holmes', 'Onyeka Okongwu', 'Tre Jones', 'Facundo Campazzo', 'Kevin Knox II', 'Aaron Henry']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 20%|██        | 2/10 [00:01<00:05,  1.55it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Winner Team:  ['Anthony Edwards', 'Tyrese Maxey', 'Collin Sexton', 'Ricky Rubio', 'Derrick White', 'Jae Crowder', 'Corey Kispert', 'Cedi Osman', 'Isaiah Livers', 'Dewayne Dedmon', 'Justise Winslow', 'Killian Tillie', 'Isaiah Joe']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 30%|███       | 3/10 [00:01<00:04,  1.74it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Winner Team:  ['Anthony Edwards', 'Tyrese Maxey', 'Collin Sexton', 'Ricky Rubio', 'Derrick White', 'Jae Crowder', 'Corey Kispert', 'Cedi Osman', 'Isaiah Livers', 'Dewayne Dedmon', 'Justise Winslow', 'Killian Tillie', 'Isaiah Joe']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 40%|████      | 4/10 [00:02<00:03,  1.80it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Winner Team:  ['Anthony Edwards', 'Tyrese Maxey', 'Collin Sexton', 'Ricky Rubio', 'Derrick White', 'Jae Crowder', 'Corey Kispert', 'Cedi Osman', 'Isaiah Livers', 'Dewayne Dedmon', 'Justise Winslow', 'Killian Tillie', 'Isaiah Joe']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 50%|█████     | 5/10 [00:02<00:02,  1.87it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Winner Team:  ['Scottie Barnes', 'Giannis Antetokounmpo', 'Caris LeVert', 'Jakob Poeltl', 'Robert Williams III', 'Jordan Clarkson', 'Jaden McDaniels', 'Deandre Ayton', 'Landry Shamet', 'Daniel Gafford', 'Mike Muscala', 'Trevelin Queen', 'Isaac Bonga']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 60%|██████    | 6/10 [00:03<00:02,  1.94it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Winner Team:  ['Scottie Barnes', 'Giannis Antetokounmpo', 'Caris LeVert', 'Jakob Poeltl', 'Robert Williams III', 'Jordan Clarkson', 'Jaden McDaniels', 'Deandre Ayton', 'Landry Shamet', 'Daniel Gafford', 'Mike Muscala', 'Trevelin Queen', 'Isaac Bonga']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 70%|███████   | 7/10 [00:03<00:01,  2.03it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Winner Team:  ['Scottie Barnes', 'Giannis Antetokounmpo', 'Caris LeVert', 'Jakob Poeltl', 'Robert Williams III', 'Jordan Clarkson', 'Jaden McDaniels', 'Deandre Ayton', 'Landry Shamet', 'Daniel Gafford', 'Mike Muscala', 'Trevelin Queen', 'Isaac Bonga']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 80%|████████  | 8/10 [00:04<00:00,  2.02it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Winner Team:  ['Jaylen Brown', 'Gordon Hayward', 'Precious Achiuwa', 'George Hill', 'Furkan Korkmaz', 'Frank Kaminsky', 'Bones Hyland', 'Zach Collins', 'Armoni Brooks', 'Elijah Hughes', 'Carlik Jones', 'Tyrell Terry', 'Sam Dekker']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 90%|█████████ | 9/10 [00:04<00:00,  2.10it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Winner Team:  ['Jaylen Brown', 'Gordon Hayward', 'Precious Achiuwa', 'George Hill', 'Furkan Korkmaz', 'Frank Kaminsky', 'Bones Hyland', 'Zach Collins', 'Armoni Brooks', 'Elijah Hughes', 'Carlik Jones', 'Tyrell Terry', 'Sam Dekker']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:05<00:00,  1.93it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Winner Team:  ['Jaylen Brown', 'Gordon Hayward', 'Precious Achiuwa', 'George Hill', 'Furkan Korkmaz', 'Frank Kaminsky', 'Bones Hyland', 'Zach Collins', 'Armoni Brooks', 'Elijah Hughes', 'Carlik Jones', 'Tyrell Terry', 'Sam Dekker']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "winner_list = run_tournament(average_performances,model=model,rounds=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Taj Gibson', 'Patty Mills', 'Nikola Vucevic', 'Joel Embiid', 'Myles Turner', 'Cedi Osman', 'Lauri Markkanen', 'Torrey Craig', 'Keita Bates-Diop', 'Ja Morant', 'Killian Tillie', 'Herbert Jones', 'Corey Kispert']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100/100 [00:01<00:00, 67.12it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "W/L:  0.35\n",
-      "['Nikola Vucevic', 'Brandon Ingram', 'Danuel House Jr.', 'Derrick Jones Jr.', 'Lauri Markkanen', 'Eric Paschall', 'Killian Tillie', 'Deni Avdija', 'Devin Vassell', 'Aleksej Pokusevski', 'Brodric Thomas', 'James Bouknight', 'Cade Cunningham']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100/100 [00:01<00:00, 72.02it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "W/L:  0.38\n",
-      "['Jae Crowder', 'JaMychal Green', 'Malcolm Brogdon', 'Bam Adebayo', 'Kevin Porter Jr.', 'Naz Reid', 'Admiral Schofield', 'Jay Scrubb', 'Brandon Boston Jr.', 'Greg Brown III', 'Bones Hyland', 'Jalen Suggs', 'Terry Taylor']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100/100 [00:01<00:00, 84.87it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "W/L:  0.66\n",
-      "['Al Horford', 'Nicolas Batum', 'Patrick Beverley', 'Kyle Anderson', 'Tyus Jones', 'Kelly Oubre Jr.', 'Norman Powell', 'Furkan Korkmaz', 'Fred VanVleet', 'Goga Bitadze', 'Nassir Little', 'Dean Wade', \"Day'Ron Sharpe\"]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100/100 [00:01<00:00, 84.02it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "W/L:  0.76\n",
-      "['Kevin Durant', 'DeMar DeRozan', 'Enes Freedom', 'Draymond Green', 'Aaron Gordon', 'Juancho Hernangomez', 'Jalen Brunson', 'Jaylen Nowell', 'Matt Thomas', 'Anthony Edwards', 'Jaden McDaniels', 'Isaiah Joe', 'Josh Christopher']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100/100 [00:01<00:00, 63.69it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "W/L:  0.93\n",
-      "['Trevor Ariza', 'James Harden', 'Avery Bradley', 'Steven Adams', 'Trey Lyles', 'Kevon Looney', 'Pascal Siakam', 'Luka Doncic', 'Duncan Robinson', 'Keldon Johnson', 'Matt Thomas', 'Jared Butler', 'Kenyon Martin Jr.']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100/100 [00:01<00:00, 81.77it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "W/L:  1.0\n",
-      "Super Team Found\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "[ 1.037212  -1.1517944]\n"
      ]
     }
    ],
    "source": [
-    "super_team_ids = get_super_team(team_size=13)"
+    "team_A, team_B = 'TOR','PHI'\n",
+    "score = simulate_nba_matchup(team_A,team_B, average_performances, model=model, team_A_injured_player_ids=[1630567,1629018],team_B_injured_player_ids=[1629680,1629646], team_size=team_size)\n",
+    "print(score)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2.2151113 -2.0816162]\n"
+     ]
+    }
+   ],
    "source": [
-    "def nba_test_team(team_player_ids, team_size=13):\n",
-    "    teams = season_performances.TEAM_ABBREVIATION.unique()\n",
-    "    team_A_features = average_performances[average_performances[\"PLAYER_ID\"].isin(team_player_ids)]\n",
-    "    team_A_features = team_A_features.iloc[:team_size,2:].sort_values('MIN',ascending=False).reset_index(drop=True)\n",
-    "    win_loss_list = []\n",
-    "    better_teams = []\n",
-    "    for team in teams:\n",
-    "        team_B_player_ids = list(season_performances[season_performances.TEAM_ABBREVIATION==team].groupby(['PLAYER_ID','PLAYER_NAME']).mean().sort_values('MIN',ascending=False).reset_index().PLAYER_ID[:team_size])\n",
-    "        team_B_features = average_performances[average_performances[\"PLAYER_ID\"].isin(team_B_player_ids)]\n",
-    "        team_B_features = team_B_features.iloc[:team_size,2:].sort_values('MIN',ascending=False).reset_index(drop=True)\n",
-    "        team_A_feature_df = get_team_feature_df(team_A_features, team_B_features)\n",
-    "        team_B_feature_df = get_team_feature_df(team_B_features, team_A_features)\n",
-    "        plus_minus_prediction = model.predict(\n",
-    "                    pd.concat([team_A_feature_df, team_B_feature_df])\n",
-    "                )\n",
-    "        if plus_minus_prediction[0] > plus_minus_prediction[1]:\n",
-    "            win_loss_list.append(1)\n",
-    "        else:\n",
-    "            win_loss_list.append(0)\n",
-    "            better_teams.append(team_B_player_ids)\n",
-    "\n",
-    "    return np.mean(win_loss_list)"
+    "team_A, team_B = 'MIL','CHI'\n",
+    "score = simulate_nba_matchup(team_A,team_B, average_performances, model=model,team_A_injured_player_ids=[201588],team_B_injured_player_ids=[1628366], team_size=team_size)\n",
+    "print(score)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.53322136 1.9660505 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "team_A, team_B = 'MIN','MEM'\n",
+    "score = simulate_nba_matchup(team_A,team_B, average_performances, model=model, team_B_injured_player_ids=[1630583],team_size=team_size)\n",
+    "print(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2.9148102  -0.56881136]\n"
+     ]
+    }
+   ],
+   "source": [
+    "team_A, team_B = 'UTA','DAL'\n",
+    "score = simulate_nba_matchup(team_A,team_B, average_performances, model=model, team_A_injured_player_ids=[1630235,1628962],team_B_injured_player_ids=[1629029,203501,1628373],team_size=team_size)\n",
+    "print(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.8452193  1.4690707]\n"
+     ]
+    }
+   ],
+   "source": [
+    "team_A, team_B = 'DEN','GSW'\n",
+    "score = simulate_nba_matchup(team_A,team_B, average_performances, model=model, team_A_injured_player_ids=[1629008,1627750], team_B_injured_player_ids=[2738,1630164],team_size=team_size)\n",
+    "print(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.27657956  1.1309649 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "team_A, team_B = 'ATL','MIA'\n",
+    "score = simulate_nba_matchup(team_A,team_B, average_performances, model=model, team_A_injured_player_ids=[101150,203991],team_size=team_size)\n",
+    "print(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5.2492776 -4.939594 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "team_A, team_B = 'PHX','NOP'\n",
+    "score = simulate_nba_matchup(team_A,team_B, average_performances, model=model, team_A_injured_player_ids=[203967], team_B_injured_player_ids=[1629627,1630184],team_size=team_size)\n",
+    "print(score)"
+   ]
   }
  ],
  "metadata": {
