--- a/model.ipynb
+++ b/model.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/main/lib/python3.9/site-packages/xgboost/compat.py:31: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
-      "  from pandas import MultiIndex, Int64Index\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pymongo\n",
     "import pandas as pd\n",
@@ -22,8 +13,15 @@
     "from tqdm import tqdm\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import r2_score\n",
-    "from constants import MONGO_NAME,MONGO_PW, MONGO_DB\n",
-    "\n",
+    "from constants import MONGO_NAME,MONGO_PW, MONGO_DB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "client = pymongo.MongoClient(\n",
     "    f\"mongodb+srv://{MONGO_NAME}:{MONGO_PW}@cluster0.sfhws.mongodb.net/{MONGO_DB}?retryWrites=true&w=majority\"\n",
     ")\n",
@@ -32,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,17 +55,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "player_count = 8\n",
+    "player_count = 13\n",
     "target = 'PLUS_MINUS'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,9 +347,6 @@
     "    booster=\"gbtree\",\n",
     "    learning_rate=0.1,\n",
     "    n_estimators=n,\n",
-    "    gamma=0.6,\n",
-    "    subsample=0.8,\n",
-    "    colsample_bytree=0.8,\n",
     "    objective=\"reg:squarederror\",\n",
     "    nthread=-1,\n",
     "    eval_metric=\"rmse\",\n",
